# wasmide

./: .gitignore  package.json
code-stack/: project.config.json
code-stack/miniprogram/pages/index/: index.ts  index.wxml
code-stack/miniprogram/pages/logs/: logs.js
code-stock/miniprogram/: app.js  app.ts
code-stock/miniprogram/pages/index/: index.js
rust/: README.md
rust/code-stock/: Cargo.toml  README.md  test.js  wapm.toml
rust/code-stock/src/: main.rs
rust/hello-rust/: Cargo.toml  wapm.toml
rust/hello-rust/src/: main.rs
server/: README.md  package-lock.json  package.json  test.js  tsconfig.json
server/src/: index.ts
test/: local-install.sh
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/public/: hello-rust.wasm  helloworld_bg.wasm
ui/src/: App.vue  initTer.ts  main.ts  worker.ts
ui/src/components/: HelloWorld.vue
ui/src/pages/: info.module.less  info.tsx  login.vue  term.tsx
ui/src/services/wapm/: wapm.js
