[package]
name = "hello-rust"
version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# clap = "2.32.0"
# rand = "~0.3"
# include_dir="0.2.1"
# wee_alloc = "*"


# [profile.release]
# lto="fat"
# opt-level =  "s"
# codegen-units = 1
